# RawTCP_Lib

./: CMakeLists.txt  main.c
include/: builder.h  pkt.h  sck_mgr.h  segment.h  stream.h  stream_builder.h
src/: builder.c  pkt.c  sck_mgr.c  segment.c  stream_builder.c
